# Autonomous_Agents_Project_Aruco_Hunter

./: README.md
mobile_robot/: package.xml
mobile_robot/config/: robot.rviz
mobile_robot/launch/: gazebo.launch  world.launch
mobile_robot/plugins/: CMakeLists.txt  aruco_path_plan.cc
mobile_robot/scripts/: aruco_rec.py
mobile_robot/urdf/: camera.xacro  color_tags.xacro  gazebo_control(nope).xacro  gazebo_controlz.xacro  rover.urdf.xacro  rover_core.xacro
mobile_robot/worlds/: aruco_world_final.world
models/4x4_1000-5/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
models/4x4_1000-5_moving/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
models/4x4_1000-5_moving/meshes/: 4x4_1000-5.dae
models/4x4_1000-6/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
models/4x4_1000-6/meshes/: 4x4_1000-6.dae
models/4x4_1000-7/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
models/4x4_1000-7/meshes/: 4x4_1000-7.dae
models/4x4_1000-8/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
models/4x4_1000-8/meshes/: 4x4_1000-8.dae
models/4x4_1000-9/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
models/4x4_1000-9/meshes/: 4x4_1000-9.dae
